--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ title: john so
         <a target="_blank" href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>
       </p>
       <p>
-        We learn to predict the future trajectories of arbitrary points by pre-training on actionless videos. Using these trajectories for downstream policy learning, we demonstrate sample-efficient learning and cross-embodiment knowledge transfer.
+        We learn to generate trajectories of arbitrary points from large actionless video datasets and condition a policy on these learned point trajectories, enabling sample-efficient policy learning and positive cross-embodiment transfer.
       </p>
       <p>
         <span class="badge conference"><b>RSS 2024</b></span>
@@ -104,9 +104,7 @@ title: john so
         <a target="_blank" href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>
       </p>
       <p>
-        We extract dense features from pre-trained networks to learn generalizable manipulation skills.
-        This shows improvements on categorical generalization against paradigms such as naively using
-        pre-trained representations.
+        We propose a novel method to adapt dense features from pre-trained vision backbones for sample-efficienct policy learning and generalization to unseen objects.
       </p>
       <p>
         <span class="badge conference"><b>ICRA 2024</b></span>
