--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: john so
+title: joso
 ---
 
 <div class="section">
@@ -46,7 +46,7 @@ title: john so
 </div>
 <div class="section">
   <div class="text-container">
-    <h2>research</h2>
+    <h2>research<hr></h2>
   </div>
   <div class="subsection">
     <div class="text-container">
@@ -157,7 +157,7 @@ title: john so
 </div>
 <div class="section">
   <div class="text-container">
-    <h2>teaching</h2>
+    <h2>teaching<hr></h2>
   </div>
   <div class="subsection">
     <div class="text-container">
@@ -169,7 +169,7 @@ title: john so
 </div>
 <div class="section">
   <div class="text-container">
-    <h2>miscellaneous</h2>
+    <h2>miscellaneous<hr></h2>
   </div>
   <div class="subsection">
     <div class="text-container">
@@ -182,11 +182,7 @@ title: john so
       </p>
       <br>
       <p>
-        I'm attempting to keep a blog about my thoughts and experiences. You can find it <a href="/blog.html">here</a>.
-      </p>
-      <br>
-      <p>
-        I like to think about how to best teach, learn, and optimize for fulfillment. Shoot me an email or DM if you'd like to chat :&#41;
+        I'm attempting to keep a blog about my thoughts and experiences, which you can find <a href="/blog.html">here</a>. I like to think about how to best teach, learn, and optimize for fulfillment; shoot me an email or DM if you'd like to chat :&#41;
       </p>
     </div>
   </div>
