--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@ title: joso
         <!-- <a target="_blank" href="/media/pdf/johnso_2023.pdf">resume</a> | -->
         <a target="_blank" href="https://github.com/johnrso">github</a> |
         <a target="_blank" href="https://twitter.com/johnrso_">twitter</a> |
-        <!-- <a target="_blank" href="https://scholar.google.com/citations?user=r0vGtTwAAAAJ">scholar</a> | -->
-        <a target="_blank" href="https://www.linkedin.com/in/johnianrso/">linkedin</a>
+        <a target="_blank" href="https://www.linkedin.com/in/johnianrso/">linkedin</a> |
+        <a target="_blank" href="/media/pdf/johnso_2024.pdf">cv</a> |
+        <a target="_blank" href="https://scholar.google.com/citations?user=r0vGtTwAAAAJ">scholar</a>
       &#125; </p>
     </div>
   </div>
