--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ title: joso
       </p>
       <br>
       <p>
-        I like to think about how to best teach, learn, and optimize for fulfillment; I'm attempting to keep a blog about my thoughts and experiences, which you can find <a href="/blog.html">here</a>. Shoot me an email or DM if you'd like to chat :&#41;
+        I like to think about how to best teach, learn, and optimize for fulfillment. Shoot me an email or DM if you'd like to chat :&#41;
       </p>
     </div>
   </div>
